--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -231,8 +231,16 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <!--<a href="#books" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;books&nbsp;(2)</a><a href="#covid-19" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;covid-19&nbsp;(1)</a><a href="#shakespeare" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;shakespeare&nbsp;(1)</a><a href="#test" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;test&nbsp;(3)</a>-->
-<p>I have struggled with weight as far back as I can remember.  I use to think I was just big boned, had bad 
-    genetics, was short and just about everything else you can imagine. 
+<p>
+    I have struggled with weight as far back as I can remember.  I use to think I was just big boned, had bad 
+    genetics, was short and just about everything else you can imagine. I've read books, tried a bunch off different
+    diets and fads to see some benefits but gain it all back (and sometimes more). 
+
+    It's been a coaster of ups and downs and when I was <i>just</i> about to give up, 
+    I found <b>intermittent fasting</b>.
+
+    <h1>It's not <i>what</i> you eat but <b>when</b> you eat!</h1>
+    So simple!  The only concept is to limit your calories by limiting the amount of time you're allowed to eat.
 </p>
 
 <div id="full-tags-list"><h2 id="books" class="linked-section">
