--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -231,16 +231,39 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <!--<a href="#books" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;books&nbsp;(2)</a><a href="#covid-19" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;covid-19&nbsp;(1)</a><a href="#shakespeare" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;shakespeare&nbsp;(1)</a><a href="#test" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;test&nbsp;(3)</a>-->
-<p>
-    I have struggled with weight as far back as I can remember.  I use to think I was just big boned, had bad 
-    genetics, was short and just about everything else you can imagine. I've read books, tried a bunch off different
-    diets and fads to see some benefits but gain it all back (and sometimes more). 
+    <p>
+        I have struggled with weight as far back as I can remember.  I use to think I was just big boned, had bad 
+        genetics, was short and just about everything else you can imagine. I've read books, tried a bunch off different
+        diets and fads to see some benefits but gain it all back (and sometimes more).  
+    </p>
+    <p>
+        It's been a coaster of ups and downs and when I was <i>just</i> about to give up, 
+        I found <b>intermittent fasting</b>.
+    </p>
+    <p>
+        <h2>It's not <i>what</i> you eat but <b>when</b> you eat!</h2>
+        So simple!  The only concept is to limit your calories by limiting the amount of time 
+        you're allowed to eat.  There's a lot of variets of intermittent fasting but the simplest I found was the 
+        16/8. 
+    </p>
+    <p>
+        During the 16/8, you eat for <b>8</b> hours and fast for <b>16</b> hours.  You can choose whatever time
+        frame works bests for your life as long as you can keep to it.  
+    </p>
+    <p>
+        I choose to eat during the hours of 12 pm to 8 pm. All other times, I didn't eat anything other than 
+        non-calorie drinks, coffee, and lots of water.  
+    </p>
+    <p>
+        That's it! It's that simple.  There's nothing to buy and nothing else to do.  You can <i>choose</i> to 
+        exercise but it's not required.  It'll speed up your weight loss but at the end of the day, in order to loose
+        weight, you have to eat less than you burn.
+    </p>
+    <blockquote>weight loss = calories_in < calories_out</blockquote>
+</p>
 
-    It's been a coaster of ups and downs and when I was <i>just</i> about to give up, 
-    I found <b>intermittent fasting</b>.
-
-    <h1>It's not <i>what</i> you eat but <b>when</b> you eat!</h1>
-    So simple!  The only concept is to limit your calories by limiting the amount of time you're allowed to eat.
+<p> Here are some additional writings about different aspect of intermitting fasting including exercise,
+    good times of foods to consume and overall general health.
 </p>
 
 <div id="full-tags-list"><h2 id="books" class="linked-section">
