--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -243,7 +243,7 @@
     <p>
         <h2>It's not <i>what</i> you eat but <i>when</i> you eat!</h2>
         So simple!  The only concept is to limit your calories by limiting the amount of time 
-        you're allowed to eat.  There's a lot of variets of intermittent fasting but the simplest I found was the 
+        you're allowed to eat.  There's a lot of varieties of intermittent fasting but the simplest I found was the 
         16/8. 
     </p>
     <p>
