--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -243,11 +243,11 @@
     <p>
         <h2>It's not <i>what</i> you eat but <i>when</i> you eat!</h2>
         So simple!  The only concept is to limit your calories by limiting the amount of time 
-        you're allowed to eat.  There's a lot of varieties of intermittent fasting but the simplest I found was the 
+        you're allowed to eat.  There's a lot of varieties of intermittent fasting but the simplest I found was  
         16/8. 
     </p>
     <p>
-        During the 16/8, you eat for <b>8</b> hours and fast for <b>16</b> hours.  You can choose whatever time
+        During 16/8, you eat for <b>8</b> hours and fast for <b>16</b> hours.  You can choose whatever time
         frame works bests for your life as long as you can keep to it.  
     </p>
     <p>
@@ -264,7 +264,7 @@
 
 <p> 
     Here are some additional writings about different aspect of intermitting fasting including exercise,
-    good times of foods to consume and overall general health.
+    good types of foods to consume and overall general health.
 </p>
 
 <div id="full-tags-list"><h2 id="books" class="linked-section">
