--- a/search/index.html
+++ b/search/index.html
@@ -138,11 +138,11 @@
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
+          <li><a href="/intermittent-fasting">Intermittent Fasting</a></li>
           <li><a href="/aboutme">About Me</a></li>
           <li class="navlinks-container">
             <a class="navlinks-parent" href="javascript:void(0)">Resources</a>
             <div class="navlinks-children">
-              <a href="/intermittent-fasting">Intermittent Fasting</a>
               <a href="https://jekyllrb.com/">Jekyll Generator</a>
               <a href="https://www.markdownguide.org/basic-syntax/">Learn markdown</a>
               <a href="http://deanattali.com/beautiful-jekyll/">Beautiful Jekyll</a>
