--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -231,44 +231,38 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <!--<a href="#books" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;books&nbsp;(1)</a><a href="#covid-19" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;covid-19&nbsp;(1)</a><a href="#test" class="btn btn-primary tag-btn"><i class="fas fa-tag" aria-hidden="true"></i>&nbsp;test&nbsp;(2)</a>-->
-    <p>
-        I have struggled with weight as far back as I can remember.  I use to think I was just big boned, had bad 
-        genetics, was short and just about everything else you can imagine. I've read books, tried a bunch off different
-        diets and fads to see some benefits but gain it all back (and sometimes more).  
-    </p>
-    <p>
-        It's been a coaster of ups and downs and when I was <i>just</i> about to give up, 
-        I found <b>intermittent fasting</b>.
-    </p>
-    <p>
-        <h2>It's not <i>what</i> you eat but <i>when</i> you eat!</h2>
-        So simple!  The only concept is to limit your calories by limiting the amount of time 
-        you're allowed to eat.  There's a lot of varieties of intermittent fasting but the simplest I found was  
-        16/8. 
-    </p>
-    <p>
-        During 16/8, you eat for <b>8</b> hours and fast for <b>16</b> hours.  You can choose whatever time
-        frame works bests for your life as long as you can keep to it.  
-    </p>
-    <p>
-        I choose to eat during the hours of 12 pm to 8 pm. All other times, I didn't eat anything other than 
-        non-calorie drinks, coffee, and lots of water.  
-    </p>
-    <p>
-        That's it! It's that simple.  There's nothing to buy and nothing else to do.  You can <i>choose</i> to 
-        exercise but it's not required.  It'll speed up your weight loss but at the end of the day, in order to lose
-        weight, you have to eat less than you burn.
-    </p>
-    <blockquote>weight loss = calories_in < calories_out</blockquote>
-</p>
 
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'>    <iframe title="YouTube video player" width="640" height="390" src="//www.youtube.com/embed/VIhhrYjVhOk" frameborder="0" allowfullscreen></iframe></div>
+<p>I have struggled with weight as far back as I can remember.  I use to think I was just big boned, had bad 
+genetics, was short and just about everything else you can imagine. I’ve read books, tried a bunch off different
+diets and fads to see some benefits but gain it all back (and sometimes more).</p>
 
-<p> 
-    Here are some additional writings about different aspect of intermitting fasting including exercise,
-    good types of foods to consume and overall general health.
-</p>
+<p>It’s been a coaster of ups and downs and when I was <i>just</i> about to give up, 
+I found <b>intermittent fasting</b>.</p>
 
+<h2 id="its-not-what-you-eat-but-when-you-eat">It’s not <i>what</i> you eat but <i>when</i> you eat!</h2>
+<p>So simple!  The only concept is to limit your calories by limiting the amount of time 
+you’re allowed to eat.  There’s a lot of varieties of intermittent fasting but the simplest I found was<br />
+<code class="highlighter-rouge">16/8</code>.</p>
+
+<p>During <code class="highlighter-rouge">16/8</code>, you eat for <em>8</em> hours and fast for <em>16</em> hours.  You can choose whatever time
+frame works bests for your life as long as you can keep to it.</p>
+
+<p>I choose to eat during the hours of 12 pm to 8 pm. All other times, I didn’t eat anything other than 
+non-calorie drinks, coffee, and lots of water.</p>
+
+<p>That’s it! It’s that simple.  There’s nothing to buy and nothing else to do.  You can <i>choose</i> to 
+exercise but it’s not required.  It’ll speed up your weight loss but at the end of the day, in order to lose
+weight, you have to eat less than you burn.</p>
+
+<blockquote>
+  <p>weight loss = calories_in &lt; calories_out</p>
+</blockquote>
+
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
+<div class="embed-container">    <iframe title="YouTube video player" width="640" height="390" src="//www.youtube.com/embed/VIhhrYjVhOk" frameborder="0" allowfullscreen=""></iframe></div>
+
+<p>Here are some additional writings about different aspect of intermitting fasting including exercise,
+good types of foods to consume and overall general health.</p>
 
 <div id="full-tags-list"><h2 id="books" class="linked-section">
         <i class="fas fa-tag" aria-hidden="true"></i>
