--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -239,6 +239,16 @@ diets and fads to see some benefits but gain it all back (and sometimes more).</
 <p>It’s been a coaster of ups and downs and when I was <i>just</i> about to give up, 
 I found <b>intermittent fasting</b>.</p>
 
+<style>
+    .image-gallery {overflow: auto; margin-left: -1%!important;}
+    .image-gallery li {float: left; display: block; margin: 0 0 1% 1%; width: 19%;}
+    .image-gallery li a {text-align: center; text-decoration: none!important; color: #777;}
+    .image-gallery li a span {display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 3px 0; font-size: 12px;}
+    .image-gallery li a img {width: 100%; display: block;}
+</style>
+
+<ul class="image-gallery"><li><a href="/img/gallery/intermittent-fasting-photos/2.%20Big%20Beard.jpg" title="2. Big Beard"><img src="//images.weserv.nl/?url=hey-what.com/img/gallery/intermittent-fasting-photos/2.%20Big%20Beard.jpg&amp;w=300&amp;h=300&amp;output=jpg&amp;q=50&amp;t=square" alt="2. Big Beard" title="2. Big Beard" /><span>2. Big Beard</span></a></li><li><a href="/img/gallery/intermittent-fasting-photos/3.%20Hanging%20with%20Friends.JPG" title="3. Hanging with Friends"><img src="//images.weserv.nl/?url=hey-what.com/img/gallery/intermittent-fasting-photos/3.%20Hanging%20with%20Friends.JPG&amp;w=300&amp;h=300&amp;output=jpg&amp;q=50&amp;t=square" alt="3. Hanging with Friends" title="3. Hanging with Friends" /><span>3. Hanging with Friends</span></a></li><li><a href="/img/gallery/intermittent-fasting-photos/4.%20Award.jpg" title="4. Award"><img src="//images.weserv.nl/?url=hey-what.com/img/gallery/intermittent-fasting-photos/4.%20Award.jpg&amp;w=300&amp;h=300&amp;output=jpg&amp;q=50&amp;t=square" alt="4. Award" title="4. Award" /><span>4. Award</span></a></li></ul>
+
 <h2 id="its-not-what-you-eat-but-when-you-eat">It’s not <i>what</i> you eat but <i>when</i> you eat!</h2>
 <p>So simple!  The only concept is to limit your calories by limiting the amount of time 
 you’re allowed to eat.  There’s a lot of varieties of intermittent fasting but the simplest I found was<br />
