--- a/404.html
+++ b/404.html
@@ -94,7 +94,7 @@
   
 
   
-  <meta property="og:image" content="http://hey-what.com/img/bugs.png" />
+  <meta property="og:image" content="http://hey-what.com/img/bugs.jpg" />
   
 
 
@@ -119,7 +119,7 @@
   
 
   
-  <meta name="twitter:image" content="http://hey-what.com/img/bugs.png" />
+  <meta name="twitter:image" content="http://hey-what.com/img/bugs.jpg" />
   
 
   
@@ -164,7 +164,7 @@
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="http://hey-what.com/">
-	      <img class="avatar-img" src="/img/bugs.png" alt="Avatar Image"/>
+	      <img class="avatar-img" src="/img/bugs.jpg" alt="Avatar Image"/>
 		</a>
 	  </div>
 	</div>
