--- a/2015-01-04-first-post/index.html
+++ b/2015-01-04-first-post/index.html
@@ -88,7 +88,7 @@
   
 
   
-  <meta property="og:image" content="http://hey-what.com/img/bugs.png" />
+  <meta property="og:image" content="http://hey-what.com/img/bugs.jpg" />
   
 
 
@@ -107,7 +107,7 @@
   
 
   
-  <meta name="twitter:image" content="http://hey-what.com/img/bugs.png" />
+  <meta name="twitter:image" content="http://hey-what.com/img/bugs.jpg" />
   
 
   
