--- a/search/index.html
+++ b/search/index.html
@@ -93,7 +93,7 @@
   
 
   
-  <meta property="og:image" content="http://hey-what.com/img/bugs.png" />
+  <meta property="og:image" content="http://hey-what.com/img/bugs.jpg" />
   
 
 
@@ -111,7 +111,7 @@
   
 
   
-  <meta name="twitter:image" content="http://hey-what.com/img/bugs.png" />
+  <meta name="twitter:image" content="http://hey-what.com/img/bugs.jpg" />
   
 
   
@@ -156,7 +156,7 @@
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="http://hey-what.com/">
-	      <img class="avatar-img" src="/img/bugs.png" alt="Avatar Image"/>
+	      <img class="avatar-img" src="/img/bugs.jpg" alt="Avatar Image"/>
 		</a>
 	  </div>
 	</div>
