--- a/intermittent-fasting/index.html
+++ b/intermittent-fasting/index.html
@@ -254,7 +254,7 @@ I found <b>intermittent fasting</b>.</p>
 you’re allowed to eat.  There’s a lot of varieties of intermittent fasting but the simplest I found was<br />
 <code class="highlighter-rouge">16/8</code>.</p>
 
-<p>During <code class="highlighter-rouge">16/8</code>, you eat for <em>8</em> hours and fast for <em>16</em> hours.  You can choose whatever time
+<p>During <code class="highlighter-rouge">16/8</code>, you <strong>eat</strong> for <em>8</em> hours and <strong>fast</strong> for <em>16</em> hours.  You can choose whatever time
 frame works bests for your life as long as you can keep to it.</p>
 
 <p>I choose to eat during the hours of 12 pm to 8 pm. All other times, I didn’t eat anything other than 
