--- a/search/index.html
+++ b/search/index.html
@@ -144,6 +144,8 @@
             <div class="navlinks-children">
               <a href="https://jekyllrb.com/">Jekyll Generator</a>
               <a href="https://www.markdownguide.org/basic-syntax/">Learn markdown</a>
+              <a href="https://shopify.github.io/liquid/">Learn Liquid</a>
+              <a href="https://devhints.io/jekyll">Jekyll Cheatsheet</a>
               <a href="http://deanattali.com/beautiful-jekyll/">Beautiful Jekyll</a>
             </div>
           </li>
